--- a/src/app/delivery-receive-confirm/delivery-receive-confirm.page.html
+++ b/src/app/delivery-receive-confirm/delivery-receive-confirm.page.html
@@ -1,9 +1,42 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>delivery-receive-confirm</ion-title>
+    <ion-title>คุณได้รับของแล้ว</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-card-header color="tertiary">
+    <ion-avatar>
+      <img
+        src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fsites.google.com%2Fsite%2Fsisyasanguan%2F_%2Frsrc%2F1479445848905%2Fprawati%2Fchis-sweet-home-screenshot-01.jpg&imgrefurl=https%3A%2F%2Fsites.google.com%2Fsite%2Fsisyasanguan%2Fprawati&tbnid=HXNrTazAoU96sM&vet=12ahUKEwjQlNS56OLpAhWZBLcAHQgrCvEQMygBegUIARCmAg..i&docid=Pbs4iEk50NSd3M&w=480&h=347&q=chi%20sweet%20home&hl=en&ved=2ahUKEwjQlNS56OLpAhWZBLcAHQgrCvEQMygBegUIARCmAg">
+    </ion-avatar>
+
+    <ion-item color="tertiary" lines="none" class="ion-text-center">
+      <ion-label>
+        <h2><b>ให้คะแนนการบริการ</b></h2>
+      </ion-label>
+    </ion-item>
+
+    <ion-item color="tertiary" lines="none">
+      <ion-label>
+        <h2><b>คำแนะนำ</b></h2>
+      </ion-label>
+    </ion-item>
+
+    <ion-item color="tertiary" lines="none">
+      <ion-textarea placeholder="เขียนคำแนะนำการให้บริการ" rows="4"></ion-textarea>
+    </ion-item>
+  </ion-card-header>
+
+  <ion-item color="light" lines="none" class="ion-text-center">
+    <ion-label>
+      <h4>แจ้งรายงานปัญหา</h4>
+    </ion-label>
+  </ion-item>
 
 </ion-content>
+
+<ion-footer>
+  <ion-button id="app-form-submit" (click)="handleSubmit()" color="danger" ion-button expand="full" no-margin>ตกลง
+  </ion-button>
+</ion-footer>
