edit ui no padding

--- a/src/app/delivery-receive-confirm/delivery-receive-confirm.page.html
+++ b/src/app/delivery-receive-confirm/delivery-receive-confirm.page.html
@@ -17,17 +17,19 @@
       </ion-label>
     </ion-item>
 
-    <ion-item color="tertiary" lines="none">
+    <ion-item color="tertiary" lines="none" class="ion-no-padding">
       <ion-label>
         <h2><b>คำแนะนำ</b></h2>
       </ion-label>
     </ion-item>
 
-    <ion-item color="tertiary" lines="none">
+    <ion-item color="tertiary" lines="none" class="ion-no-padding">
       <ion-textarea placeholder="เขียนคำแนะนำการให้บริการ" rows="4"></ion-textarea>
     </ion-item>
   </ion-card-header>
-
+  
+  <ion-item color="light" lines="none"></ion-item>
+  
   <ion-item color="light" lines="none" class="ion-text-center">
     <ion-label>
       <h4>แจ้งรายงานปัญหา</h4>
