--- a/src/app/shop-menu-select/shop-menu-select.page.html
+++ b/src/app/shop-menu-select/shop-menu-select.page.html
@@ -1,9 +1,94 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>shop-menu-select</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content mode="ios" color="light">
+  <ng-container>
+    <!-- <ng-container *ngIf="data$ | async as item"> -->
+    <ion-list lines="full" class="ion-no-padding">
+      <img src="https://fk.lnwfile.com/nd9ddz.jpg" />
+      <ion-item>
+        <ion-label>
+          <ion-note> เปิด 11.00 - 19.00 น. ทุกวัน</ion-note>
+          <h2><b>WIB Cafe</b></h2>
+          <ion-note>คาเฟ่ของหวาน</ion-note>
+          <ion-note>*4.8 15 นาที 10 บาท</ion-note>
+        </ion-label>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-segment scrollable="true" (ionChange)="segmentChanged(category)" [(ngModel)]="category" lines="none"
+          mode="md">
+          <ion-segment-button>
+            <ion-label><b>ร้อน </b></ion-label>
+          </ion-segment-button>
+          <ion-segment-button>
+            <ion-label><b>เย็น </b></ion-label>
+          </ion-segment-button>
+          <ion-segment-button>
+            <ion-label><b>ปั่น </b></ion-label>
+          </ion-segment-button>
+          <!-- <div *ngFor="let data of item">
+            <ion-segment-button *ngIf="data.products.length > 0" [value]="data.categoryId">
+              <ion-label><b> {{data.categoryName}}</b></ion-label>
+            </ion-segment-button>
+          </div> -->
+        </ion-segment>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start" class="ion-margin-vertical">
+          <img
+            src="https://travel.mthai.com/app/uploads/2014/07/%E0%B8%A0%E0%B8%B2%E0%B8%9E%E0%B8%97%E0%B8%B4%E0%B8%A7%E0%B8%97%E0%B8%B1%E0%B8%A8%E0%B8%99%E0%B9%8C%E0%B8%AA%E0%B8%A7%E0%B8%A2%E0%B9%86-14.jpg">
+        </ion-thumbnail>
+        <ion-text>
+          <ion-label>
+            <h2><b>เอสเปรสโซเย็น</b></h2>
+            <ion-note>
+              <h2>สินค้าหมด</h2>
+            </ion-note>
+          </ion-label>
+        </ion-text>
+        <ion-note class="ion-margin-vertical" slot="end">
+          <ion-label>
+            <h3><b>฿ 50</b></h3>
+          </ion-label>
+        </ion-note>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start" class="ion-margin-vertical">
+          <img
+            src="https://travel.mthai.com/app/uploads/2014/07/%E0%B8%A0%E0%B8%B2%E0%B8%9E%E0%B8%97%E0%B8%B4%E0%B8%A7%E0%B8%97%E0%B8%B1%E0%B8%A8%E0%B8%99%E0%B9%8C%E0%B8%AA%E0%B8%A7%E0%B8%A2%E0%B9%86-14.jpg">
+        </ion-thumbnail>
+        <ion-text>
+          <ion-label>
+            <h2><b>อะเมริกาโน่</b></h2>
+            <ion-note>
+              <h2>สินค้าหมด</h2>
+            </ion-note>
+          </ion-label>
+        </ion-text>
+        <ion-note class="ion-margin-vertical" slot="end">
+          <ion-label>
+            <h3><b>฿ 50</b></h3>
+          </ion-label>
+        </ion-note>
+      </ion-item>
+      <!-- <ion-item color="light" *ngFor="let menu of data.products">
+        <ion-thumbnail slot="start" class="ion-margin-vertical">
+          <img [src]="menu.previewImageUrl != null ? menu.previewImageUrl :'assets/imgs/dfmenu.png'">
+        </ion-thumbnail>
+        <ion-text>
+          <ion-label color="dark">
+            <h2><b>{{menu.name}}</b></h2>
+            <h3><b>฿{{menu.price | number}}</b></h3>
+          </ion-label>
+          <ion-label color="danger">
+            <p></p>
+          </ion-label>
+        </ion-text>
+        <ion-note slot="end">
+          <ion-label color="dark">
+            <h2>
+              <ion-icon name="pencil-outline"></ion-icon>
+            </h2>
+          </ion-label>
+        </ion-note>
+      </ion-item> -->
+    </ion-list>
+  </ng-container>
 </ion-content>
