mockui shop select page.

--- a/src/app/shop-select/shop-select.page.html
+++ b/src/app/shop-select/shop-select.page.html
@@ -4,6 +4,38 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content color="tertiary" class="ion-padding-top" mode="ios">
+  <ion-list color="tertiary">
+    <ion-list-header color="tertiary" mode="md">
+      <ion-label color="danger">
+        <h1>ร้านแนะนำ</h1>
+      </ion-label>
+    </ion-list-header>
+    <ion-list-content>
+      <ion-item color="tertiary" lines="none">
+        <div class="ion-margin-end">
+          <img src="https://img.freepik.com/free-vector/new-arrival-banner-template-yellow-blue-colors_1361-1655.jpg?size=626&ext=jpg" alt="">
+          <ion-label>
+            <p><b>Wib</b></p>
+          </ion-label>
+          <ion-row>
+            <ion-col>
+              <ion-label>
+                <ion-text color="medium" >
+                  <p>คาเฟ่</p>
+                </ion-text>
+              </ion-label>
+            </ion-col>
+            <ion-col class="ion-text-end">
+              <ion-label>
+                <ion-text color="medium" >
+                  <p><ion-icon name="time-outline" color="danger"></ion-icon>10นาที</p>
+                </ion-text>
+              </ion-label>
+            </ion-col>
+          </ion-row>
+        </div>
+      </ion-item>
+    </ion-list-content>    
+  </ion-list>
 </ion-content>
