mock up ui shop menu comfirm page and resolve unknow tag element.

--- a/src/app/shop-menu-confirm/shop-menu-confirm.page.html
+++ b/src/app/shop-menu-confirm/shop-menu-confirm.page.html
@@ -5,5 +5,60 @@
 </ion-header>
 
 <ion-content>
+  <div class="ion-margin-top" color="tertiary">
+    <ion-item color="tertiary">
+      <ion-thumbnail slot="start" class="ion-margin-top">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG">
+      </ion-thumbnail>
+      <ion-label>เอสเปรสโซเย็น</ion-label>
+      <ion-label class="ion-text-end"><b>฿50</b></ion-label>
+    </ion-item>
+    <ion-list color="tertiary">
+      <ion-list-header color="tertiary">
+        <ion-item lines="none" color="tertiary">
+          <ion-thumbnail slot="start">
+          </ion-thumbnail>
+          <h4 class="ion-no-padding">รายละเอียดเพิ่มเติม</h4>
+        </ion-item>
+      </ion-list-header>
+      <ion-item color="tertiary">
+        <ion-thumbnail slot="start">
+        </ion-thumbnail>
+        <ion-label>
+          <h3>หวานน้อย</h3>
+        </ion-label>
+        <ion-checkbox slot="start" color="danger"></ion-checkbox>
+      </ion-item>
+      <ion-item color="tertiary">
+        <ion-thumbnail slot="start">
+        </ion-thumbnail>
+        <ion-label>
+          <h3>หวานปกติ</h3>
+        </ion-label>
+        <ion-checkbox slot="start" color="danger"></ion-checkbox>
+      </ion-item>
+      <ion-item color="tertiary">
+        <ion-thumbnail slot="start">
+        </ion-thumbnail>
+        <ion-label>
+          <h3>หวานมาก</h3>
+        </ion-label>
+        <ion-checkbox slot="start" color="danger"></ion-checkbox>
+      </ion-item>
+    </ion-list>
+  </div>
+  <div class="ion-margin-vertical" color="tertiary">
+    <ion-item color="tertiary" lines="none">
+      <ion-label class="ion-margin-start">
+        <h2>หมายเหตุ</h2>
+      </ion-label>
+    </ion-item>
+    <ion-item color="tertiary" lines="none">
+      <ion-textarea class="ion-text-center" placeholder="กรอกหมายเหตุ"></ion-textarea>
+    </ion-item>
+
+
+  </div>
+
 
 </ion-content>
