--- a/src/app/delivery-order-detail/delivery-order-detail.page.html
+++ b/src/app/delivery-order-detail/delivery-order-detail.page.html
@@ -1,9 +1,54 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>delivery-order-detail</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content>
+<ion-content  mode="ios">
+  <ion-item color="light" color="tertiary" lines="full">
+    <ion-label>
+      <p><b>รายละเอียดการจ่ายเงิน</b></p>
+      <ion-text color="medium" >
+        <p>รวมค่าสินค้า</p>
+        <p>ค่าจัดส่ง</p>
+        <p>ส่วนลด</p>
+        <p>ราคารวมทั้งหมด</p>
+      </ion-text>
+    </ion-label>
+    <ion-label>
+      <ion-note slot="end" class="ion-text-end">
+        <p>&nbsp;</p>
+        <ion-text color="medium">
+          <p>฿50</p>
+          <p>฿10</p>
+          <p>฿0</p>
+          <p>฿60</p>
+        </ion-text>
+      </ion-note>
+    </ion-label>
+  </ion-item>
+
+  <ion-item color="light" color="tertiary" lines="none">
+    <ion-label>
+      <p><b>wib cafe</b></p>
+      <ion-text color="medium">
+        <p>รายการ (1 ชิ้น)</p>
+      </ion-text>
+      <p>x1 เอสเปรสโซเย็น</p>
+      <ion-text color="danger">
+        <p>หวานปกติ</p>
+      </ion-text>
+    </ion-label>
+    <ion-label>
+      <ion-note slot="end" class="ion-text-end">
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <ion-text>
+          <p>฿50.00</p>
+        </ion-text>
+        <p>&nbsp;</p>
+      </ion-note>
+    </ion-label>
+  </ion-item>
 
 </ion-content>
