--- a/src/app/delivery-order-main/delivery-order-main.page.html
+++ b/src/app/delivery-order-main/delivery-order-main.page.html
@@ -1,9 +1,120 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>delivery-order-main</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content>
+  <ion-item color="tertiary" lines="full">
+    <ion-avatar slot="start">
+      <img src="assets/imgs/ordershop.png" />
+    </ion-avatar>
+    <ion-label>
+      <ion-text>
+        <p><b>Delivery company AA</b></p>
+      </ion-text>
+    </ion-label>
+  </ion-item>
+
+  <ion-item color="tertiary" lines="none">
+    <ion-label>
+      <h2><b>สถานะจัดส่ง</b></h2>
+      <ion-text color="medium">
+        <p>เวลาที่จัดส่ง 15 นาที</p>
+      </ion-text>
+    </ion-label>
+  </ion-item>
+
+  <ion-item color="tertiary" lines="none">
+    <ion-row class="boxStepProgressBar">
+      <div>
+        <li>
+          <div class="nodeUnSuccess"></div>
+          <p>รอ (10.00 น.)</p>
+        </li>
+        <li>
+          <div class="lineUnSuccess"></div>
+        </li>
+        <li>
+          <div class="nodeUnSuccess"></div>
+          <p>รับออเดอร์</p>
+        </li>
+        <li>
+          <div class="lineUnSuccess"></div>
+        </li>
+        <li>
+          <div class="nodeUnSuccess"></div>
+          <p>จัดส่ง</p>
+        </li>
+        <li>
+          <div class="lineUnSuccess"></div>
+        </li>
+        <li>
+          <div *ngIf="'false'" class="nodeUnSuccess"></div>
+          <p>ของถึงแล้ว</p>
+        </li>
+      </div>
+    </ion-row>
+  </ion-item>
+
+  <ion-item color="tertiary" lines="full">
+    <ion-note slot="start">
+      <ion-text color="dark">
+        <ion-label>
+          <ion-icon name="location-outline"></ion-icon> ติดต่อ
+        </ion-label>
+      </ion-text>
+    </ion-note>
+    <ion-note slot="end">
+      <ion-text>
+        <ion-label>
+          ยกเลิก
+        </ion-label>
+      </ion-text>
+    </ion-note>
+  </ion-item>
+
+  <ion-item color="light" color="tertiary" lines="none">
+    <ion-label>
+      <p><b>รายการที่สั่ง</b></p>
+    </ion-label>
+    <ion-note slot="end">
+      <ion-text color="success">
+        <ion-label>
+            <ion-icon color="danger" name="location-outline"></ion-icon>
+        </ion-label>
+      </ion-text>
+    </ion-note>
+
+  </ion-item>
+
+  <ion-item color="light" color="tertiary" lines="none">
+    <ion-avatar slot="start">
+      <img src="assets/imgs/ordershop.png" />
+    </ion-avatar>
+    <ion-label>
+      <p><b>wib cafe</b></p>
+    </ion-label>
+  </ion-item>
+
+  <ion-item color="light" color="tertiary" lines="none">
+    <ion-label>
+      <p>x1 เอสเปรสโซเย็น</p>
+      <ion-text color="danger">
+        <p>หวานปกติ</p>
+      </ion-text>
+    </ion-label>
+    <ion-label>
+      <ion-note slot="end" class="ion-text-end">
+        <ion-text>
+          <p>฿50.00</p>
+        </ion-text>
+        <p>สถานะ...</p>
+      </ion-note>
+    </ion-label>
+  </ion-item>
+
+
+
 
 </ion-content>
