--- a/src/app/shop-menu-confirm/shop-menu-confirm.page.html
+++ b/src/app/shop-menu-confirm/shop-menu-confirm.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content mode="ios">
   <div class="ion-margin-top" color="tertiary">
     <ion-item color="tertiary">
       <ion-thumbnail slot="start" class="ion-margin-top">
@@ -54,7 +54,7 @@
       </ion-label>
     </ion-item>
     <ion-item color="tertiary" lines="none">
-      <ion-textarea class="ion-text-center" placeholder="กรอกหมายเหตุ"></ion-textarea>
+      <ion-textarea></ion-textarea>
     </ion-item>
 
 
