--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,229 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+
+.text-red{
+    color: var(--ion-color-danger) !important;
+}
+.text-white{
+    color: var(--ion-color-tertiary) !important;
+}
+.text-gray{
+    color: gray !important;
+}
+.text-blue{
+    color: var(--ion-color-primary) !important;
+}
+.text-black{
+    color: var(--ion-color-dark) !important;
+}
+.text-yellow{
+    color: var(--ion-color-warning) !important;
+}
+
+.eslip-aproved-logo{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: unset;
+}
+.eslip-dim {
+    -webkit-filter:brightness(50%);
+    -moz-filter:brightness(50%);
+    filter: url(#brightness);
+    filter:brightness(50%);
+}
+
+.content-full{
+    min-height: 100%
+}
+
+ion-card {
+    margin: unset !important;
+    border: none !important;
+    width: auto !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    border-radius: unset;
+    .qr {
+
+        display: block;
+        width: unset;
+    }
+    .icon {
+
+        width: unset;
+        display: unset;
+    }
+    .circle {
+        border-radius: 50% !important;
+    }
+}
+
+ion-item {
+    img.circle {
+        border-radius: 50% !important;
+    }
+}
+
+.center{
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
+    display: block;
+}
+
+.searchbar-ios {
+    background: unset;
+}
+
+form ion-item ion-label{
+    font-weight: bold;
+}
+
+.non-circle {
+    border-radius: unset !important;
+}
+
+.img-responsive{
+    max-width: 100%;
+    height: auto;
+}
+
+ion-fab {
+    margin: 0 !important;
+}
+
+.bold{
+    font-weight: bold
+}
+
+.line-through{
+    text-decoration: line-through;
+}
+
+.transaction {
+    .right-line {
+      border-right: 0.55px solid #c8c7cc !important;
+    }
+
+    .right-arrow {
+      position: absolute;
+      top: 50%;
+      left: 100%;
+      transform: translate(-50%, -50%);
+      font-size: 1.5rem;
+      color: var(--ion-color-medium);
+      background-color: var(--ion-color-tertiary);
+    }
+
+    .indentation {
+      background-image: url(./assets/imgs/indentationbg.png);
+      background-repeat: repeat-x;
+      height: 10px;
+      margin-top: -1px;
+      background-size: 16px;
+    }
+
+    .text-no-wrap {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+
+    .text-vertical-center {
+      margin: auto 0px !important;
+    }
+
+    .content-center {
+      display: flex;
+      justify-content: center;
+    }
+
+    .padding-vertical-long {
+      padding: 50px 0 !important;
+    }
+
+    ion-label {
+      margin: unset !important;
+    }
+
+    .list-ios {
+      margin: unset !important;
+    }
+
+    .transaction-img {
+      width: 35px;
+      height: 35px;
+    }
+}
+
+ion-avatar.avatar-small{
+    width: 30px;
+    height: 30px;;
+}
+
+ion-avatar.avatar-medium{
+    width: 45px;
+    height: 45px;;
+}
+
+ion-fab-button.fab-small{
+    width: 30px;
+    height: 30px;
+}
+
+.no-shadow{
+    --box-shadow:none !important;
+    box-shadow: none !important;
+}
+
+.ion-select-full{
+    max-width: unset;
+    width: 100%;
+}
+
+ion-item.imageCenter img {
+    height: 90px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+ion-label ion-skeleton-text {
+    height: 17px;
+    width: 80%;
+}
+
+H3 ion-skeleton-text {
+    height: 14px;
+    width: 60%;
+}
+  // Fonts
+// --------------------------------------------------
+@font-face {
+    font-family: 'Kanit';
+    font-style: normal;
+    font-weight: 300;
+    src: url('./assets/fonts/kanit-v3-latin_thai-300.eot'); /* IE9 Compat Modes */
+    src: local('Kanit Light'), local('Kanit-Light'),
+         url('./assets/fonts/kanit-v3-latin_thai-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./assets/fonts/kanit-v3-latin_thai-300.woff2') format('woff2'), /* Super Modern Browsers */
+         url('./assets/fonts/kanit-v3-latin_thai-300.woff') format('woff'), /* Modern Browsers */
+         url('./assets/fonts/kanit-v3-latin_thai-300.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./assets/fonts/kanit-v3-latin_thai-300.svg#Kanit') format('svg'); /* Legacy iOS */
+  }
+  
+//   * {
+//     font-family: 'Kanit', sans-serif;
+//   }
+  
+  $font-family-base: 'Kanit';
+  $font-family-ios-base: 'Kanit';
+  $font-family-md-base: 'Kanit';
+  $font-family-wp-base: 'Kanit';
+//   @import "roboto";
+//   @import "noto-sans";
