resolve bad display response.

--- a/src/app/shop-menu-confirm/shop-menu-confirm.page.html
+++ b/src/app/shop-menu-confirm/shop-menu-confirm.page.html
@@ -10,7 +10,7 @@
       <ion-thumbnail slot="start" class="ion-margin-top">
         <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG">
       </ion-thumbnail>
-      <ion-label>เอสเปรสโซเย็น</ion-label>
+      <ion-label><b>เอสเปรสโซเย็น</b></ion-label>
       <ion-label class="ion-text-end"><b>฿50</b></ion-label>
     </ion-item>
     <ion-list color="tertiary">
@@ -18,7 +18,7 @@
         <ion-item lines="none" color="tertiary">
           <ion-thumbnail slot="start">
           </ion-thumbnail>
-          <h4 class="ion-no-padding">รายละเอียดเพิ่มเติม</h4>
+          <h4 class="ion-no-padding"><b>รายละเอียดเพิ่มเติม</b></h4>
         </ion-item>
       </ion-list-header>
       <ion-item color="tertiary">
@@ -50,7 +50,7 @@
   <div class="ion-margin-vertical" color="tertiary">
     <ion-item color="tertiary" lines="none">
       <ion-label class="ion-margin-start">
-        <h2>หมายเหตุ</h2>
+        <h2><b>หมายเหตุ</b></h2>
       </ion-label>
     </ion-item>
     <ion-item color="tertiary" lines="none">
