--- a/src/app/delivery-cancel-confirm/delivery-cancel-confirm.page.html
+++ b/src/app/delivery-cancel-confirm/delivery-cancel-confirm.page.html
@@ -13,8 +13,7 @@
     </ion-list-header>
 
     <ion-item color="tertiary">
-      <ion-label>สาเหตุการยกเลิก</ion-label>
-      <ion-select formControlName="heading" slot="end">
+      <ion-select formControlName="heading" slot="end" placeholder="555">
         <ion-select-option value="รถเสีย">รถเสีย</ion-select-option>
         <ion-select-option value="น้ำท่วม">น้ำท่วม</ion-select-option>
       </ion-select>
