--- a/src/app/delivery-order-detail/delivery-order-detail.page.html
+++ b/src/app/delivery-order-detail/delivery-order-detail.page.html
@@ -4,51 +4,70 @@
   </ion-toolbar>
 </ion-header> -->
 
-<ion-content  mode="ios">
-  <ion-item color="light" color="tertiary" lines="full">
-    <ion-label>
-      <p><b>รายละเอียดการจ่ายเงิน</b></p>
-      <ion-text color="medium" >
-        <p>รวมค่าสินค้า</p>
-        <p>ค่าจัดส่ง</p>
-        <p>ส่วนลด</p>
-        <p>ราคารวมทั้งหมด</p>
-      </ion-text>
-    </ion-label>
-    <ion-label>
-      <ion-note slot="end" class="ion-text-end">
-        <p>&nbsp;</p>
-        <ion-text color="medium">
-          <p>฿50</p>
-          <p>฿10</p>
-          <p>฿0</p>
-          <p>฿60</p>
-        </ion-text>
-      </ion-note>
-    </ion-label>
+<ion-content mode="ios">
+  <ion-item color="tertiary" lines="full"  >
+    <ion-grid class="ion-padding-top ion-padding-bottom">
+      <ion-row>
+        <ion-col class="ion-no-padding">
+          <b>รายละเอียดการจ่ายเงิน</b>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-no-padding">
+          <ion-label>รวมค่าสินค้า</ion-label>
+        </ion-col>
+        <ion-col class="ion-no-padding ion-text-right">฿50
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-no-padding">ค่าจัดส่ง
+        </ion-col>
+        <ion-col class="ion-no-padding ion-text-right">฿10
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-no-padding">ส่วนลด
+        </ion-col>
+        <ion-col class="ion-no-padding ion-text-right">฿10
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-no-padding">ราคารวมทั้งหมด
+        </ion-col>
+        <ion-col class="ion-no-padding ion-text-right">
+          <ion-text>฿70</ion-text>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-item>
 
-  <ion-item color="light" color="tertiary" lines="none">
-    <ion-label>
-      <p><b>wib cafe</b></p>
-      <ion-text color="medium">
-        <p>รายการ (1 ชิ้น)</p>
-      </ion-text>
-      <p>x1 เอสเปรสโซเย็น</p>
-      <ion-text color="danger">
-        <p>หวานปกติ</p>
-      </ion-text>
-    </ion-label>
-    <ion-label>
-      <ion-note slot="end" class="ion-text-end">
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <ion-text>
-          <p>฿50.00</p>
-        </ion-text>
-        <p>&nbsp;</p>
-      </ion-note>
-    </ion-label>
+  <ion-item color="tertiary" lines="none"  class="ion-padding-bottom">
+    <ion-grid>
+      <ion-row>
+        <ion-col class="ion-no-padding">
+          <b>wib cafe</b>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-no-padding">
+          <ion-label color="medium">
+            รายการ (1 ชิ้น)
+          </ion-label>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-no-padding">
+          <ion-label>x1 เอสเปรสโซเย็น</ion-label>
+        </ion-col>
+        <ion-col class="ion-no-padding ion-text-right">฿50
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-no-padding">
+          <ion-text color="danger">หวานปกติ</ion-text>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-item>
 
 </ion-content>
