--- a/src/app/delivery-order-main/delivery-order-main.page.html
+++ b/src/app/delivery-order-main/delivery-order-main.page.html
@@ -5,18 +5,14 @@
 </ion-header> -->
 
 <ion-content>
-  <ion-item color="tertiary" lines="full">
-    <ion-avatar slot="start">
-      <img src="assets/imgs/ordershop.png" />
+  <ion-item color="tertiary" lines="none">
+    <ion-avatar class="avatar-small" slot="start">
+      <img src="assets/icon/favicon.png" />
     </ion-avatar>
-    <ion-label>
-      <ion-text>
-        <p><b>Delivery company AA</b></p>
-      </ion-text>
-    </ion-label>
+    <ion-label>Delivery A</ion-label>
   </ion-item>
 
-  <ion-item color="tertiary" lines="none">
+  <ion-item color="tertiary" lines="none" class="ion-padding-top">
     <ion-label>
       <h2><b>สถานะจัดส่ง</b></h2>
       <ion-text color="medium">
@@ -29,7 +25,7 @@
     <ion-row class="boxStepProgressBar">
       <div>
         <li>
-          <div class="nodeUnSuccess"></div>
+          <div class="nodeSuccess"></div>
           <p>รอ (10.00 น.)</p>
         </li>
         <li>
@@ -61,60 +57,62 @@
     <ion-note slot="start">
       <ion-text color="dark">
         <ion-label>
-          <ion-icon name="location-outline"></ion-icon> ติดต่อ
+          <ion-icon name="call-outline"></ion-icon>
+          <b>
+            ติดต่อ
+          </b>
         </ion-label>
       </ion-text>
     </ion-note>
     <ion-note slot="end">
-      <ion-text>
-        <ion-label>
+      <ion-text color="dark">
+        <b>
           ยกเลิก
-        </ion-label>
+        </b>
       </ion-text>
     </ion-note>
   </ion-item>
 
   <ion-item color="light" color="tertiary" lines="none">
     <ion-label>
-      <p><b>รายการที่สั่ง</b></p>
+      <h2><b>รายการที่สั่ง</b></h2>
     </ion-label>
     <ion-note slot="end">
       <ion-text color="success">
         <ion-label>
-            <ion-icon color="danger" name="location-outline"></ion-icon>
+          <ion-icon color="danger" name="location-outline"></ion-icon>
         </ion-label>
       </ion-text>
     </ion-note>
-
   </ion-item>
 
-  <ion-item color="light" color="tertiary" lines="none">
-    <ion-avatar slot="start">
-      <img src="assets/imgs/ordershop.png" />
+  <ion-item color="tertiary" lines="none">
+    <ion-avatar slot="start" class="avatar-small">
+      <img src="assets/icon/favicon.png" />
     </ion-avatar>
-    <ion-label>
-      <p><b>wib cafe</b></p>
-    </ion-label>
+    <label>
+      <h5><b>wib cafe</b></h5>
+    </label>
   </ion-item>
 
-  <ion-item color="light" color="tertiary" lines="none">
-    <ion-label>
-      <p>x1 เอสเปรสโซเย็น</p>
-      <ion-text color="danger">
-        <p>หวานปกติ</p>
-      </ion-text>
-    </ion-label>
-    <ion-label>
-      <ion-note slot="end" class="ion-text-end">
-        <ion-text>
-          <p>฿50.00</p>
-        </ion-text>
-        <p>สถานะ...</p>
-      </ion-note>
-    </ion-label>
+  <ion-item color="tertiary" lines="none" class="ion-padding-bottom" >
+    <ion-grid class="ion-no-padding">
+      <ion-row>
+        <ion-col class="ion-no-padding">
+          <ion-label>x1 เอสเปรสโซเย็น</ion-label>
+        </ion-col>
+        <ion-col class="ion-no-padding ion-text-right">฿50
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-no-padding">
+          <ion-label color="danger">หวานปกติ</ion-label>
+        </ion-col>
+        <ion-col class="ion-no-padding ion-text-right">
+          <ion-label color="medium">สถานะ...</ion-label>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-item>
-
-
-
 
 </ion-content>
