--- a/src/app/delivery-order-main/delivery-order-main.page.scss
+++ b/src/app/delivery-order-main/delivery-order-main.page.scss
@@ -1,5 +1,5 @@
 .boxStepProgressBar{ // ทั้งกล่อง
-    margin-top: 5px;
+    margin-top: -10px;
     margin-bottom: 5px;
 }
 
@@ -16,15 +16,15 @@
     width: 10px;
     border-radius: 50%;
     display:inline-block;
-    background-color: #31aa04;
+    background-color: var(--ion-color-danger);
 }
 
 .lineUnSuccess { //เส้น
-    height: 20px; //ความสูงของเส้น a ไป b
+    height: 30px; //ความสูงของเส้น a ไป b
     width: 2px;
     margin-left: 4px;
-    margin-top: -10px;
-    margin-bottom: -9px;
+    margin-top: -15px;
+    margin-bottom: -15px;
     background-color: #9191a3;
 }
 
