--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,14 +7,84 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-item lines="none">
+    <ion-avatar slot="start">
+      <ion-skeleton-text animated></ion-skeleton-text>
+    </ion-avatar>
+    <ion-label>
+      <ion-skeleton-text animated></ion-skeleton-text>
+      <h3>
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </h3>
+    </ion-label>
+  </ion-item>
+  <hr style="background-color: black;">
+
+  <ion-item lines="none">
+    <ion-label>
+      <ion-skeleton-text animated></ion-skeleton-text>
+    </ion-label>
+  </ion-item>
+
+  <hr style="background-color: black;">
+
+  <ion-item lines="none">
+    <ion-skeleton-text animated style="height: 70px; width: 100%;"></ion-skeleton-text>
+  </ion-item>
+
+  <hr style="background-color: black;">
+
+  <ion-card color="light" class="ion-text-center">
+    <ion-card-content>
+      <ion-skeleton-text class="center circle ion-margin-bottom" animated style="width:100px; height:100px">
+      </ion-skeleton-text>
+    </ion-card-content>
+  </ion-card>
+
+  <hr style="background-color: black;">
+
+  <ion-card color="light" class="ion-text-center">
+      <ion-label>
+        <h3>
+          <ion-skeleton-text class="center" animated style="width:200px;"></ion-skeleton-text>
+        </h3>
+        <ion-skeleton-text class="center" animated style="width:200px;"></ion-skeleton-text>
+      </ion-label>
+  </ion-card>
+
+  <hr style="background-color: black;">
+
+  <ion-item lines="none">
+    <ion-label>
+      <ion-skeleton-text animated></ion-skeleton-text>
+      <h3>
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </h3>
+      <h3>
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </h3>
+    </ion-label>
+  </ion-item>
+
+  <hr style="background-color: black;">
+
+  <ion-row>
+    <ion-col size="6">
+      <ion-skeleton-text class="center circle" animated style="width: 35px; height: 35px;"></ion-skeleton-text>
+      <ion-label>
+        <h3>
+          <ion-skeleton-text class="center" animated></ion-skeleton-text>
+        </h3>
+      </ion-label>
+    </ion-col>
+    <ion-col size="6">
+      <ion-skeleton-text class="center circle" animated style="width: 35px; height: 35px;"></ion-skeleton-text>
+      <ion-label>
+        <h3>
+          <ion-skeleton-text class="center" animated></ion-skeleton-text>
+        </h3>
+      </ion-label>
+    </ion-col>
+  </ion-row>
 </ion-content>
