--- a/src/app/shop-menu-select/shop-menu-select.page.html
+++ b/src/app/shop-menu-select/shop-menu-select.page.html
@@ -1,9 +1,9 @@
 <ion-content mode="ios" color="light">
   <ng-container>
     <!-- <ng-container *ngIf="data$ | async as item"> -->
-    <ion-list lines="full" class="ion-no-padding">
+    <ion-list lines="inset" class="ion-no-padding">
       <img src="https://fk.lnwfile.com/nd9ddz.jpg" />
-      <ion-item>
+      <ion-item lines="full">
         <ion-label>
           <ion-note> เปิด 11.00 - 19.00 น. ทุกวัน</ion-note>
           <h2><b>WIB Cafe</b></h2>
@@ -12,16 +12,21 @@
         </ion-label>
       </ion-item>
       <ion-item lines="none">
-        <ion-segment scrollable="true" (ionChange)="segmentChanged(category)" [(ngModel)]="category" lines="none"
-          mode="md">
+        <ion-segment (ionChange)="segmentChanged(category)" [(ngModel)]="category" lines="none" mode="md">
           <ion-segment-button>
-            <ion-label><b>ร้อน </b></ion-label>
+            <ion-label color="dark">
+              <h2><b>ร้อน </b></h2>
+            </ion-label>
           </ion-segment-button>
           <ion-segment-button>
-            <ion-label><b>เย็น </b></ion-label>
+            <ion-label color="dark">
+              <h2><b>เย็น </b></h2>
+            </ion-label>
           </ion-segment-button>
           <ion-segment-button>
-            <ion-label><b>ปั่น </b></ion-label>
+            <ion-label color="dark">
+              <h2><b>ปั่น </b></h2>
+            </ion-label>
           </ion-segment-button>
           <!-- <div *ngFor="let data of item">
             <ion-segment-button *ngIf="data.products.length > 0" [value]="data.categoryId">
@@ -39,13 +44,13 @@
           <ion-label>
             <h2><b>เอสเปรสโซเย็น</b></h2>
             <ion-note>
-              <h2>สินค้าหมด</h2>
+              <p></p>
             </ion-note>
           </ion-label>
         </ion-text>
-        <ion-note class="ion-margin-vertical" slot="end">
+        <ion-note color="dark" slot="end">
           <ion-label>
-            <h3><b>฿ 50</b></h3>
+            <h2><b>฿ 50</b></h2>
           </ion-label>
         </ion-note>
       </ion-item>
@@ -58,13 +63,13 @@
           <ion-label>
             <h2><b>อะเมริกาโน่</b></h2>
             <ion-note>
-              <h2>สินค้าหมด</h2>
+              <p>สินค้าหมด</p>
             </ion-note>
           </ion-label>
         </ion-text>
-        <ion-note class="ion-margin-vertical" slot="end">
+        <ion-note color="dark" slot="end">
           <ion-label>
-            <h3><b>฿ 50</b></h3>
+            <h2><b>฿ 50</b></h2>
           </ion-label>
         </ion-note>
       </ion-item>
