--- a/src/app/delivery-order-main/delivery-order-main.page.html
+++ b/src/app/delivery-order-main/delivery-order-main.page.html
@@ -5,114 +5,116 @@
 </ion-header> -->
 
 <ion-content>
-  <ion-item color="tertiary" lines="none">
-    <ion-avatar class="avatar-small" slot="start">
-      <img src="assets/icon/favicon.png" />
-    </ion-avatar>
-    <ion-label>Delivery A</ion-label>
-  </ion-item>
+  <ng-container *ngIf="order$ | async as data">
+    <ion-item color="tertiary" lines="none">
+      <ion-avatar class="avatar-small" slot="start">
+        <img src="assets/icon/favicon.png" />
+      </ion-avatar>
+      <ion-label>  {{ data.delivery?.name }} </ion-label>
+    </ion-item>
 
-  <ion-item color="tertiary" lines="none" class="ion-padding-top">
-    <ion-label>
-      <h2><b>สถานะจัดส่ง</b></h2>
-      <ion-text color="medium">
-        <p>เวลาที่จัดส่ง 15 นาที</p>
-      </ion-text>
-    </ion-label>
-  </ion-item>
+    <ion-item color="tertiary" lines="none" class="ion-padding-top">
+      <ion-label>
+        <h2><b>สถานะจัดส่ง</b></h2>
+        <ion-text color="medium">
+          <p>เวลาที่จัดส่ง 15 นาที</p>
+        </ion-text>
+      </ion-label>
+    </ion-item>
 
-  <ion-item color="tertiary" lines="none">
-    <ion-row class="boxStepProgressBar">
-      <div>
-        <li>
-          <div class="nodeSuccess"></div>
-          <p>รอ (10.00 น.)</p>
-        </li>
-        <li>
-          <div class="lineUnSuccess"></div>
-        </li>
-        <li>
-          <div class="nodeUnSuccess"></div>
-          <p>รับออเดอร์</p>
-        </li>
-        <li>
-          <div class="lineUnSuccess"></div>
-        </li>
-        <li>
-          <div class="nodeUnSuccess"></div>
-          <p>จัดส่ง</p>
-        </li>
-        <li>
-          <div class="lineUnSuccess"></div>
-        </li>
-        <li>
-          <div *ngIf="'false'" class="nodeUnSuccess"></div>
-          <p>ของถึงแล้ว</p>
-        </li>
-      </div>
-    </ion-row>
-  </ion-item>
+    <ion-item color="tertiary" lines="none">
+      <ion-row class="boxStepProgressBar">
+        <div>
+          <li>
+            <div class="nodeSuccess"></div>
+            <p>รอ ({{ data.createDate }})</p>
+          </li>
+          <li>
+            <div class="lineUnSuccess"></div>
+          </li>
+          <li>
+            <div class="nodeUnSuccess"></div>
+            <p>รับออเดอร์ ({{ data.acceptRequestDate }})</p>
+          </li>
+          <li>
+            <div class="lineUnSuccess"></div>
+          </li>
+          <li>
+            <div class="nodeUnSuccess"></div>
+            <p>จัดส่ง ({{ data.shippingDate }})</p>
+          </li>
+          <li>
+            <div class="lineUnSuccess"></div>
+          </li>
+          <li>
+            <div *ngIf="'false'" class="nodeUnSuccess"></div>
+            <p>ของถึงแล้ว ({{ data.destinationDate }})</p>
+          </li>
+        </div>
+      </ion-row>
+    </ion-item>
 
-  <ion-item color="tertiary" lines="full">
-    <ion-note slot="start">
-      <ion-text color="dark">
-        <ion-label>
-          <ion-icon name="call-outline"></ion-icon>
+    <ion-item color="tertiary" lines="full">
+      <ion-note slot="start">
+        <ion-text color="dark">
+          <ion-label>
+            <ion-icon name="call-outline"></ion-icon>
+            <b>
+              ติดต่อ
+            </b>
+          </ion-label>
+        </ion-text>
+      </ion-note>
+      <ion-note slot="end">
+        <ion-text color="dark">
           <b>
-            ติดต่อ
+            ยกเลิก
           </b>
-        </ion-label>
-      </ion-text>
-    </ion-note>
-    <ion-note slot="end">
-      <ion-text color="dark">
-        <b>
-          ยกเลิก
-        </b>
-      </ion-text>
-    </ion-note>
-  </ion-item>
+        </ion-text>
+      </ion-note>
+    </ion-item>
 
-  <ion-item color="light" color="tertiary" lines="none">
-    <ion-label>
-      <h2><b>รายการที่สั่ง</b></h2>
-    </ion-label>
-    <ion-note slot="end">
-      <ion-text color="success">
-        <ion-label>
-          <ion-icon color="danger" name="location-outline"></ion-icon>
-        </ion-label>
-      </ion-text>
-    </ion-note>
-  </ion-item>
+    <ion-item color="light" color="tertiary" lines="none">
+      <ion-label>
+        <h2><b>รายการที่สั่ง</b></h2>
+      </ion-label>
+      <ion-note slot="end">
+        <ion-text color="success">
+          <ion-label>
+            <ion-icon color="danger" name="location-outline"></ion-icon>
+          </ion-label>
+        </ion-text>
+      </ion-note>
+    </ion-item>
 
-  <ion-item color="tertiary" lines="none">
-    <ion-avatar slot="start" class="avatar-small">
-      <img src="assets/icon/favicon.png" />
-    </ion-avatar>
-    <label>
-      <h5><b>wib cafe</b></h5>
-    </label>
-  </ion-item>
+    <ion-item color="tertiary" lines="none">
+      <ion-avatar slot="start" class="avatar-small">
+        <img [src]="data.restaurant?.logoImage != null ? data.restaurant.logoImage : 'assets/icon/favicon.png'">
+      </ion-avatar>
+      <label>
+        <h5><b> {{ data.restaurant?.name }} </b></h5>
+      </label>
+    </ion-item>
 
-  <ion-item color="tertiary" lines="none" class="ion-padding-bottom" >
-    <ion-grid class="ion-no-padding">
-      <ion-row>
-        <ion-col class="ion-no-padding">
-          <ion-label>x1 เอสเปรสโซเย็น</ion-label>
-        </ion-col>
-        <ion-col class="ion-no-padding ion-text-right">฿50
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col class="ion-no-padding">
-          <ion-label color="danger">หวานปกติ</ion-label>
-        </ion-col>
-        <ion-col class="ion-no-padding ion-text-right">
-          <ion-label color="medium">สถานะ...</ion-label>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-item>
-
+    <ion-item *ngFor="let data of data.productList" color="tertiary" lines="none" class="ion-padding-bottom">
+      <ion-grid class="ion-no-padding">
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <ion-label>x{{ data.quantity }} {{ data.name }}</ion-label>
+          </ion-col>
+          <ion-col class="ion-no-padding ion-text-right">฿{{ data.quantity * data.price | number }}
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <ion-label *ngIf="data.option" color="danger"> {{ data.option }} </ion-label>
+            <ion-label *ngIf="!data.option" color="danger">&nbsp;</ion-label>
+          </ion-col>
+          <ion-col class="ion-no-padding ion-text-right">
+            <ion-label color="medium">สถานะ...</ion-label>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+  </ng-container>
 </ion-content>
