skeleton order main

--- a/src/app/delivery-order-main/delivery-order-main.page.html
+++ b/src/app/delivery-order-main/delivery-order-main.page.html
@@ -10,7 +10,7 @@
       <ion-avatar class="avatar-small" slot="start">
         <img src="assets/icon/favicon.png" />
       </ion-avatar>
-      <ion-label>  {{ data.delivery?.name }} </ion-label>
+      <ion-label> {{ data.delivery?.name }} </ion-label>
     </ion-item>
 
     <ion-item color="tertiary" lines="none" class="ion-padding-top">
@@ -117,4 +117,38 @@
       </ion-grid>
     </ion-item>
   </ng-container>
+
+  <ng-container>
+    <ion-item lines="none">
+      <ion-avatar slot="start">
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-avatar>
+      <ion-label>
+        <ion-skeleton-text animated></ion-skeleton-text>
+        <h3>
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </h3>
+      </ion-label>
+    </ion-item>
+
+    <ion-item lines="none">
+      <ion-skeleton-text animated style="height: 70px; width: 100%;"></ion-skeleton-text>
+    </ion-item>
+
+    <ion-item lines="none">
+      <ion-label>
+        <ion-skeleton-text animated></ion-skeleton-text>
+        <h3>
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </h3>
+        <h3>
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </h3>
+      </ion-label>
+    </ion-item>
+ 
+  </ng-container>
+
+
+
 </ion-content>
