--- a/src/app/delivery-order-detail/delivery-order-detail.page.html
+++ b/src/app/delivery-order-detail/delivery-order-detail.page.html
@@ -5,69 +5,75 @@
 </ion-header> -->
 
 <ion-content mode="ios">
-  <ion-item color="tertiary" lines="full"  >
-    <ion-grid class="ion-padding-top ion-padding-bottom">
-      <ion-row>
-        <ion-col class="ion-no-padding">
-          <b>รายละเอียดการจ่ายเงิน</b>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col class="ion-no-padding">
-          <ion-label>รวมค่าสินค้า</ion-label>
-        </ion-col>
-        <ion-col class="ion-no-padding ion-text-right">฿50
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col class="ion-no-padding">ค่าจัดส่ง
-        </ion-col>
-        <ion-col class="ion-no-padding ion-text-right">฿10
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col class="ion-no-padding">ส่วนลด
-        </ion-col>
-        <ion-col class="ion-no-padding ion-text-right">฿10
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col class="ion-no-padding">ราคารวมทั้งหมด
-        </ion-col>
-        <ion-col class="ion-no-padding ion-text-right">
-          <ion-text>฿70</ion-text>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-item>
+  <ng-container *ngIf="order$ | async as data">
+    <ion-item color="tertiary" lines="full">
+      <ion-grid class="ion-padding-top ion-padding-bottom">
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <b>รายละเอียดการจ่ายเงิน</b>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <ion-label>รวมค่าสินค้า</ion-label>
+          </ion-col>
+          <ion-col class="ion-no-padding ion-text-right">฿{{ data.totalPrice | number }}
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">ค่าจัดส่ง
+          </ion-col>
+          <ion-col class="ion-no-padding ion-text-right">฿ {{ data.deliveryPriceTHB }}
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">ส่วนลด
+          </ion-col>
+          <!-- TODO ยังไม่ binding-->
+          <ion-col class="ion-no-padding ion-text-right">฿10
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">ราคารวมทั้งหมด
+          </ion-col>
+          <!-- TODO ยังไม่รวมส่วนลด -->
+          <ion-col class="ion-no-padding ion-text-right">
+            <ion-text>฿ {{ data.totalPrice + data.deliveryPriceTHB | number }}</ion-text>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
 
-  <ion-item color="tertiary" lines="none"  class="ion-padding-bottom">
-    <ion-grid>
+    <ion-item color="tertiary" lines="none" class="ion-padding-bottom">
       <ion-row>
         <ion-col class="ion-no-padding">
-          <b>wib cafe</b>
+          <b>{{ data.restaurant?.name }}</b>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col class="ion-no-padding">
           <ion-label color="medium">
-            รายการ (1 ชิ้น)
+            รายการ ({{ data.totalQuantity }} ชิ้น)
           </ion-label>
         </ion-col>
       </ion-row>
-      <ion-row>
-        <ion-col class="ion-no-padding">
-          <ion-label>x1 เอสเปรสโซเย็น</ion-label>
-        </ion-col>
-        <ion-col class="ion-no-padding ion-text-right">฿50
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col class="ion-no-padding">
-          <ion-text color="danger">หวานปกติ</ion-text>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-item>
-
+    </ion-item>
+    
+    <ion-item *ngFor="let data of data.productList" color="tertiary" lines="none" class="ion-padding-bottom">
+      <ion-grid class="ion-no-padding">
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <ion-label>x{{ data.quantity }} {{ data.name }}</ion-label>
+          </ion-col>
+          <ion-col class="ion-no-padding ion-text-right">฿{{ data.quantity * data.price | number }}
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <ion-text color="danger">{{ data.option }}</ion-text>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+  </ng-container>
 </ion-content>
