update libs and change app-routing.module

--- a/src/app/shop-menu-confirm/shop-menu-confirm.page.html
+++ b/src/app/shop-menu-confirm/shop-menu-confirm.page.html
@@ -14,20 +14,20 @@
       <ion-label class="ion-text-end"><b>฿50</b></ion-label>
     </ion-item>
     <ion-list color="tertiary">
-      <ion-list-header color="tertiary">
         <ion-item lines="none" color="tertiary">
           <ion-thumbnail slot="start">
           </ion-thumbnail>
-          <h4 class="ion-no-padding"><b>รายละเอียดเพิ่มเติม</b></h4>
+          <ion-label>
+            <b class="ion-no-padding">รายละเอียดเพิ่มเติม</b>
+          </ion-label>
         </ion-item>
-      </ion-list-header>
       <ion-item color="tertiary">
         <ion-thumbnail slot="start">
         </ion-thumbnail>
         <ion-label>
           <h3>หวานน้อย</h3>
         </ion-label>
-        <ion-checkbox slot="start" color="danger"></ion-checkbox>
+        <ion-checkbox slot="start" color="primary"></ion-checkbox>
       </ion-item>
       <ion-item color="tertiary">
         <ion-thumbnail slot="start">
@@ -35,7 +35,7 @@
         <ion-label>
           <h3>หวานปกติ</h3>
         </ion-label>
-        <ion-checkbox slot="start" color="danger"></ion-checkbox>
+        <ion-checkbox slot="start" color="primary"></ion-checkbox>
       </ion-item>
       <ion-item color="tertiary">
         <ion-thumbnail slot="start">
@@ -43,7 +43,7 @@
         <ion-label>
           <h3>หวานมาก</h3>
         </ion-label>
-        <ion-checkbox slot="start" color="danger"></ion-checkbox>
+        <ion-checkbox slot="start" color="primary"></ion-checkbox>
       </ion-item>
     </ion-list>
   </div>
