mock for display

--- a/src/app/shop-menu-select/shop-menu-select.page.html
+++ b/src/app/shop-menu-select/shop-menu-select.page.html
@@ -2,9 +2,9 @@
   <ng-container *ngIf="hasLoaded == 'y'">
     <ion-list *ngIf="data$ | async as data" lines="inset" class="ion-no-padding">
       <div *ngIf="data?.restaurant as item">
-        <img [src]="item.bannerImage != null ? item.bannerImage:'https://fk.lnwfile.com/nd9ddz.jpg'" width="450"
+        <img [src]="item.bannerImage != null && item.bannerImage != 'string' ? item.bannerImage:'https://fk.lnwfile.com/nd9ddz.jpg'" width="450"
           height="170" />
-        <ion-item lines="full">
+        <ion-item lines="full" color="tertiary">
           <ion-label>
             <ion-note> เปิด 11.00 - 19.00 น. ทุกวัน</ion-note>
             <h2><b>{{item.name}}</b></h2>
@@ -15,7 +15,7 @@
       </div>
 
       <div *ngIf="data?.menu as cate">
-        <ion-item lines="none">
+        <ion-item lines="none" color="tertiary">
           <ion-segment scrollable="true" (ionChange)="segmentChanged(category)" [(ngModel)]="category" lines="none"
             mode="md">
             <div *ngFor="let c of cate">
@@ -30,7 +30,7 @@
 
         <div *ngFor="let c of cate">
           <div *ngIf="c.categoryId == segmentValue">
-            <ion-item *ngFor="let p of c?.products">
+            <ion-item *ngFor="let p of c?.products" color="tertiary">
               <ion-thumbnail slot="start" class="ion-margin-vertical">
                 <img
                   [src]=" p.previewImageUrl ? p.previewImageUrl :'https://travel.mthai.com/app/uploads/2014/07/%E0%B8%A0%E0%B8%B2%E0%B8%9E%E0%B8%97%E0%B8%B4%E0%B8%A7%E0%B8%97%E0%B8%B1%E0%B8%A8%E0%B8%99%E0%B9%8C%E0%B8%AA%E0%B8%A7%E0%B8%A2%E0%B9%86-14.jpg'">
