--- a/src/app/delivery-order-detail/delivery-order-detail.page.html
+++ b/src/app/delivery-order-detail/delivery-order-detail.page.html
@@ -5,7 +5,98 @@
 </ion-header> -->
 
 <ion-content mode="ios">
-  <ng-container *ngIf="order$ | async as data">
+  <ng-container *ngIf="true">
+    <ion-item color="tertiary" lines="full">
+      <ion-grid class="ion-padding-top ion-padding-bottom">
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <b>รายละเอียดการจ่ายเงิน</b>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <ion-label>รวมค่าสินค้า</ion-label>
+          </ion-col>
+          <ion-col class="ion-no-padding ion-text-right">฿50
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">ค่าจัดส่ง
+          </ion-col>
+          <ion-col class="ion-no-padding ion-text-right">฿10
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">ส่วนลด
+          </ion-col>
+          <!-- TODO ยังไม่ binding-->
+          <ion-col class="ion-no-padding ion-text-right">฿10
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">ราคารวมทั้งหมด
+          </ion-col>
+          <!-- TODO ยังไม่รวมส่วนลด -->
+          <ion-col class="ion-no-padding ion-text-right">
+            <ion-text>฿70</ion-text>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+
+    <ion-item color="tertiary" lines="none">
+      <ion-grid class="ion-no-padding ion-padding-top">
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <b>restaurant A</b>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <ion-label color="medium">
+              รายการ (2 ชิ้น)
+            </ion-label>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+
+    <ion-list lines="full">
+      <ion-item color="tertiary">
+        <ion-label color="dark">
+          <p>x1 ชานม</p>
+          <ion-text color="danger">
+            <p *ngIf="true" class="ion-text-wrap">หวานน้อย</p>
+          </ion-text>
+        </ion-label>
+        <ion-label>
+          <ion-note slot="end" class="ion-text-end">
+            <ion-text color="dark">
+              <p>฿50</p>
+              <p>&nbsp;</p>
+            </ion-text>
+          </ion-note>
+        </ion-label>
+      </ion-item>
+      <ion-item color="tertiary">
+        <ion-label color="dark">
+          <p>x1 ชานม</p>
+          <ion-text color="danger">
+            <p *ngIf="true" class="ion-text-wrap">หวานมาก</p>
+          </ion-text>
+        </ion-label>
+        <ion-label>
+          <ion-note slot="end" class="ion-text-end">
+            <ion-text color="dark">
+              <p>฿50</p>
+              <p>&nbsp;</p>
+            </ion-text>
+          </ion-note>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </ng-container>
+  <!-- <ng-container *ngIf="order$ | async as data">
     <ion-item color="tertiary" lines="full">
       <ion-grid class="ion-padding-top ion-padding-bottom">
         <ion-row>
@@ -29,14 +120,14 @@
         <ion-row>
           <ion-col class="ion-no-padding">ส่วนลด
           </ion-col>
-          <!-- TODO ยังไม่ binding-->
+          TODO ยังไม่ binding
           <ion-col class="ion-no-padding ion-text-right">฿10
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col class="ion-no-padding">ราคารวมทั้งหมด
           </ion-col>
-          <!-- TODO ยังไม่รวมส่วนลด -->
+          TODO ยังไม่รวมส่วนลด
           <ion-col class="ion-no-padding ion-text-right">
             <ion-text>฿ {{ data.totalPrice + data.deliveryPriceTHB | number }}</ion-text>
           </ion-col>
@@ -75,5 +166,5 @@
         </ion-row>
       </ion-grid>
     </ion-item>
-  </ng-container>
+  </ng-container> -->
 </ion-content>
