--- a/src/app/delivery-order-main/delivery-order-main.page.html
+++ b/src/app/delivery-order-main/delivery-order-main.page.html
@@ -4,8 +4,134 @@
   </ion-toolbar>
 </ion-header> -->
 
-<ion-content>
-  <ng-container *ngIf="order$ | async as data">
+<ion-content mode="ios">
+  <ng-container *ngIf="true">
+    <ion-item color="tertiary" lines="none" class="ion-margin-bottom">
+      <ion-avatar class="avatar-small" slot="start">
+        <img src="assets/icon/favicon.png" />
+      </ion-avatar>
+      <ion-label><b>delivery A</b> </ion-label>
+    </ion-item>
+
+    <ion-item color="tertiary" lines="none">
+      <ion-label>
+        <h2><b>สถานะจัดส่ง</b></h2>
+        <ion-text color="medium">
+          <p>เวลาที่จัดส่ง 15 นาที</p>
+        </ion-text>
+      </ion-label>
+    </ion-item>
+
+    <ion-item color="tertiary" lines="none">
+      <ion-row class="boxStepProgressBar">
+        <div>
+          <li>
+            <div class="nodeSuccess"></div>
+            <p>รอ (10/2/56 )</p>
+          </li>
+          <li>
+            <div class="lineUnSuccess"></div>
+          </li>
+          <li>
+            <div class="nodeUnSuccess"></div>
+            <p>รับออเดอร์ (10/2/56 )</p>
+          </li>
+          <li>
+            <div class="lineUnSuccess"></div>
+          </li>
+          <li>
+            <div class="nodeUnSuccess"></div>
+            <p>จัดส่ง (10/2/56 )</p>
+          </li>
+          <li>
+            <div class="lineUnSuccess"></div>
+          </li>
+          <li>
+            <div *ngIf="'false'" class="nodeUnSuccess"></div>
+            <p>ของถึงแล้ว (10/2/56 )</p>
+          </li>
+        </div>
+      </ion-row>
+    </ion-item>
+
+    <ion-item color="tertiary" lines="full">
+      <ion-note slot="start">
+        <ion-text color="dark">
+          <ion-label>
+            <ion-icon name="call-outline"></ion-icon>
+            <b>
+              ติดต่อ
+            </b>
+          </ion-label>
+        </ion-text>
+      </ion-note>
+      <ion-note slot="end">
+        <ion-text color="dark">
+          <b>
+            ยกเลิก
+          </b>
+        </ion-text>
+      </ion-note>
+    </ion-item>
+
+    <ion-item color="light" color="tertiary" lines="none">
+      <ion-label>
+        <h2><b>รายการที่สั่ง</b></h2>
+      </ion-label>
+      <ion-note slot="end">
+        <ion-text color="success">
+          <ion-label>
+            <ion-icon color="danger" name="location-outline"></ion-icon>
+          </ion-label>
+        </ion-text>
+      </ion-note>
+    </ion-item>
+
+    <ion-item color="tertiary" lines="none">
+      <ion-avatar slot="start" class="avatar-small">
+        <img src="assets/icon/favicon.png">
+      </ion-avatar>
+      <label>
+        <h5><b> restaurant A </b></h5>
+      </label>
+    </ion-item>
+    <ion-list lines="full">
+      <ion-item color="tertiary">
+        <ion-label color="dark">
+          <p>x1 ชานม</p>
+          <ion-text color="danger">
+            <p *ngIf="true" class="ion-text-wrap">หวานน้อย</p>
+          </ion-text>
+        </ion-label>
+        <ion-label>
+          <ion-note slot="end" class="ion-text-end">
+            <ion-text color="dark">
+              <p>฿50</p>
+              <p>&nbsp;</p>
+            </ion-text>
+          </ion-note>
+        </ion-label>
+      </ion-item>
+      <ion-item color="tertiary">
+        <ion-label color="dark">
+          <p>x1 ชานม</p>
+          <ion-text color="danger">
+            <p *ngIf="true" class="ion-text-wrap">หวานมาก</p>
+          </ion-text>
+        </ion-label>
+        <ion-label>
+          <ion-note slot="end" class="ion-text-end">
+            <ion-text color="dark">
+              <p>฿50</p>
+              <p>&nbsp;</p>
+            </ion-text>
+          </ion-note>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+
+  </ng-container>
+  <!-- <ng-container *ngIf="order$ | async as data">
     <ion-item color="tertiary" lines="none">
       <ion-avatar class="avatar-small" slot="start">
         <img src="assets/icon/favicon.png" />
@@ -116,9 +242,9 @@
         </ion-row>
       </ion-grid>
     </ion-item>
-  </ng-container>
+  </ng-container> -->
 
-  <ng-container>
+  <ng-container *ngIf="false">
     <ion-item lines="none">
       <ion-avatar slot="start">
         <ion-skeleton-text animated></ion-skeleton-text>
@@ -146,7 +272,7 @@
         </h3>
       </ion-label>
     </ion-item>
- 
+
   </ng-container>
 
 
