--- a/src/app/delivery-receive-confirm/delivery-receive-confirm.page.html
+++ b/src/app/delivery-receive-confirm/delivery-receive-confirm.page.html
@@ -1,8 +1,8 @@
-<!-- <ion-header>
+<ion-header>
   <ion-toolbar>
-    <ion-title>คุณได้รับของแล้ว</ion-title>
+    <ion-title>{{ title }}</ion-title>
   </ion-toolbar>
-</ion-header> -->
+</ion-header>
 
 <ion-content mode="ios">
   <form [formGroup]="fg">
@@ -50,12 +50,11 @@
     </ion-card-header>
 
     <ion-item color="light" lines="none" class="ion-text-center ion-padding">
-      <ion-label>
-        <h4>
-          <img width="15px" height="15px"
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkdV2Pr8PLYit-rTrXH9Fk6my1UtfpfWNLCvzvLtohVrxgDmIw6g&s">
+      <ion-label color="medium">
+        <h3>
+          <img height="12" src="assets/imgs/bikedark.png">
           แจ้งรายงานปัญหา
-        </h4>
+        </h3>
       </ion-label>
     </ion-item>
   </form>
