--- a/src/app/shop-menu-confirm/shop-menu-confirm.page.html
+++ b/src/app/shop-menu-confirm/shop-menu-confirm.page.html
@@ -1,8 +1,8 @@
-<!-- <ion-header>
+<ion-header>
   <ion-toolbar>
-    <ion-title>shop-menu-confirm</ion-title>
+    <ion-title>{{ title }}</ion-title>
   </ion-toolbar>
-</ion-header> -->
+</ion-header>
 
 <ion-content mode="ios">
   <div class="ion-margin-top" color="tertiary">
