--- a/src/app/delivery-cancel-confirm/delivery-cancel-confirm.page.html
+++ b/src/app/delivery-cancel-confirm/delivery-cancel-confirm.page.html
@@ -1,27 +1,27 @@
-<!-- <ion-header>
+<ion-header>
   <ion-toolbar>
-    <ion-title>delivery-cancel-confirm</ion-title>
+    <ion-title>{{ title }}</ion-title>
   </ion-toolbar>
-</ion-header> -->
+</ion-header>
 
 <ion-content mode="ios">
-  <form [formGroup]="fg" (ngSubmit)="handleSubmit()">
+  <form [formGroup]="fg" (ngSubmit)="OnSubmit()">
     <ion-list-header color="tertiary">
       <ion-label class="ion-margin-top">
-        <h1><b>ใส่เหตุผล</b></h1>
+        <h2><b>ใส่เหตุผล</b></h2>
       </ion-label>
     </ion-list-header>
 
-    <ion-item color="tertiary">
-      <ion-select formControlName="heading" slot="end" placeholder="555">
+    <ion-item color="tertiary" lines="full">
+      <ion-select formControlName="heading" slot="end" placeholder="โปรดเลือก">
         <ion-select-option value="รถเสีย">รถเสีย</ion-select-option>
-        <ion-select-option value="น้ำท่วม">น้ำท่วม</ion-select-option>
+        <ion-select-option value="ร้านอาหารไม่สามารถทำอาหารได้">ร้านอาหารไม่สามารถทำอาหารได้</ion-select-option>
       </ion-select>
     </ion-item>
 
     <ion-list-header color="tertiary">
       <ion-label class="ion-margin-top">
-        <h1><b>หมายเหตุ</b></h1>
+        <h2><b>หมายเหตุ</b></h2>
         <ion-item color="tertiary" class="ion-padding-top" lines="none">
           <ion-input formControlName="info" type=""></ion-input>
         </ion-item>
@@ -31,6 +31,6 @@
 </ion-content>
 
 <ion-footer>
-  <ion-button id="app-form-submit" (click)="handleSubmit()" color="danger" ion-button expand="full" no-margin>ตกลง
+  <ion-button id="app-form-submit" (click)="OnSubmit()" [disabled]="fg.invalid" color="danger" expand="full">ตกลง
   </ion-button>
 </ion-footer>
