--- a/src/app/delivery-order-detail/delivery-order-detail.page.html
+++ b/src/app/delivery-order-detail/delivery-order-detail.page.html
@@ -1,8 +1,7 @@
-<!-- <ion-header>
+<ion-header>
   <ion-toolbar>
-    <ion-title>delivery-order-detail</ion-title>
   </ion-toolbar>
-</ion-header> -->
+</ion-header>
 
 <ion-content mode="ios">
   <ng-container *ngIf="true">
@@ -54,7 +53,8 @@
         <ion-row>
           <ion-col class="ion-no-padding">
             <ion-label color="medium">
-              รายการ (2 ชิ้น)
+              <h3> รายการ (2 ชิ้น)
+              </h3>
             </ion-label>
           </ion-col>
         </ion-row>
@@ -96,7 +96,7 @@
       </ion-item>
     </ion-list>
   </ng-container>
-  <!-- <ng-container *ngIf="order$ | async as data">
+  <!-- <ng-container *ngIf="data$ | async as data">
     <ion-item color="tertiary" lines="full">
       <ion-grid class="ion-padding-top ion-padding-bottom">
         <ion-row>
