--- a/src/app/delivery-order-main/delivery-order-main.page.scss
+++ b/src/app/delivery-order-main/delivery-order-main.page.scss
@@ -1,44 +1,52 @@
-.boxStepProgressBar{ // ทั้งกล่อง
-    margin-top: -10px;
+.boxStepProgressBar {
+    // ทั้งกล่อง
+    margin-top: -8px;
     margin-bottom: 5px;
+    p {
+        font-size: 14px;
+    }
 }
 
-.nodeUnSuccess { //จุด
+.nodeUnSuccess {
+    //จุด
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    display:inline-block;
-    background-color: #9191a3;
+    display: inline-block;
+    background-color: var(--ion-color-light);
 }
 
-.nodeSuccess { //จุด
+.nodeSuccess {
+    //จุด
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    display:inline-block;
+    display: inline-block;
     background-color: var(--ion-color-danger);
 }
 
-.lineUnSuccess { //เส้น
+.lineUnSuccess {
+    //เส้น
     height: 30px; //ความสูงของเส้น a ไป b
     width: 2px;
     margin-left: 4px;
     margin-top: -15px;
     margin-bottom: -15px;
-    background-color: #9191a3;
+    background-color: var(--ion-color-light);
 }
 
-.lineSuccess { //เส้น
+.lineSuccess {
+    //เส้น
     height: 20px; //ความสูงของเส้น a ไป b
     width: 2px;
     margin-left: 4px;
     margin-top: -10px;
     margin-bottom: -9px;
-    background-color: #31aa04;
+    background-color: var(--ion-color-danger);
 }
 
 li p {
-    display:inline-block;
+    display: inline-block;
     margin-left: 25px;
 }
 
@@ -47,6 +55,9 @@ li {
     line-height: 1px;
 }
 
-.green{ background-color: rgba(92, 184, 92, 1); }
-.grey { background-color: rgba(201, 201, 201, 1); }
-
+.green {
+    background-color: rgba(92, 184, 92, 1);
+}
+.grey {
+    background-color: rgba(201, 201, 201, 1);
+}
