--- a/src/app/shop-menu-select/shop-menu-select.page.html
+++ b/src/app/shop-menu-select/shop-menu-select.page.html
@@ -1,3 +1,9 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title>{{ title }}</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content mode="ios" color="light">
   <ng-container *ngIf="hasLoaded == 'y'">
     <ion-list *ngIf="data$ | async as data" lines="inset" class="ion-no-padding">
